# bridge_data_robot

./: Dockerfile  docker-compose.yml  generate_usb_config.sh
host_install_scripts/: nvidia_docker_install.sh  ros_install.sh
multicam_server/: CMakeLists.txt  package.xml  setup.py
multicam_server/launch/: cameras.launch.py  streamer.launch.py
multicam_server/multicam_server/: camera_recorder.py  start_streamers.py  streamer.py
widowx_controller/: CMakeLists.txt  package.xml  setup.py
widowx_controller/launch/: launch.launch.py  widowx_rs.launch.py
widowx_controller/src/widowx_controller/: custom_gripper_controller.py  vr_controller_client.py  vr_controller_server.py  widowx_controller.py
widowx_controller/widowx_controller/: controller_base.py  custom_gripper_controller.py  velocity_controller.py  widowx_controller.py
widowx_controller/widowx_controller/utils/: core.py
widowx_controller_interfaces/: CMakeLists.txt  package.xml
widowx_envs/: Dockerfile  requirements.txt  setup.py
widowx_envs/experiments/bridge_data_v2/: conf.py
widowx_envs/multicam_server/launch/: streamer.launch
widowx_envs/multicam_server/src/: start_streamers.py  streamer.py
widowx_envs/multicam_server/src/multicam_server/: camera_recorder.py  topic_utils.py
widowx_envs/scripts/: run.sh  setup.sh
widowx_envs/widowx_controller/launch/: widowx_rs.launch
widowx_envs/widowx_envs/: control_loops.py  teleop.py  trajectory_collector.py  widowx_env.py  widowx_env_service.py
widowx_envs/widowx_envs/base/: robot_base_env.py
widowx_envs/widowx_envs/policies/: vr_teleop_policy.py
widowx_envs/widowx_envs/utils/: image_utils.py
