<?xml version="1.0"?>
<package format="3">
  <name>widowx_controller</name>
  <version>0.0.0</version>
  <description>Package for controlling WidowX robots</description>
  <maintainer email="jonathan@todo.todo">jonathan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>